--- a/src/styles/mainPanel.css
+++ b/src/styles/mainPanel.css
@@ -1,6 +1,7 @@
 .mainPanel {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     width: 80%;
     height: 90%;
