--- a/src/styles/bodyPanel.css
+++ b/src/styles/bodyPanel.css
@@ -1,5 +1,6 @@
 .bodyPanel {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 100vh;
