--- a/src/styles/leftPanel.css
+++ b/src/styles/leftPanel.css
@@ -1,12 +1,12 @@
-.mainPanel {
+.leftPanel {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 70%;
+    width: 15%;
     height: 90%;
     padding: 20px;
-    /*border: 2px solid #333;*/
+    /* border: 2px solid #333; */
     border-radius: 10px;
     text-align: center;
   }
