--- a/src/styles/wrongComponent.css
+++ b/src/styles/wrongComponent.css
@@ -1,12 +1,12 @@
-.mainPanel {
+.wrongComponent {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 70%;
-    height: 90%;
+    height: 80%;
+    width: 100%;
     padding: 20px;
-    /*border: 2px solid #333;*/
+    border: 2px solid #333;
     border-radius: 10px;
     text-align: center;
   }
