--- a/src/styles/rightPanel.css
+++ b/src/styles/rightPanel.css
@@ -6,7 +6,7 @@
     width: 15%;
     height: 90%;
     padding: 20px;
-    border: 2px solid #333;
+    /* border: 2px solid #333; */
     border-radius: 10px;
     text-align: center;
   }
